--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,9 @@ $fa-font-path: "../webfonts";
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 @import '~admin-lte/dist/css/adminlte.css';
+
+
+.router-link-exact-active {
+    background: #3f51b5;
+    color: white !important;
+}
